# pyFAI

./: .buildinfo  .gitattributes  .gitignore  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.txt  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSES.txt  MANIFEST  MANIFEST.in  Python3_shame_list  README.md  README.rst  README.txt  SECURITY.md  TODO.txt  appveyor.yml  bootstrap.py  build-deb.sh  build-deb7.sh  build-deb8.sh  build-debian-full.sh  build-doc.py  build-msi.bat  copyright  foo-mask.edf  genindex.html  index.html  info_platform.py  install_python.ps1  make_man  memleak.py  meson.build  objects.inv  (+19 more)
pyFAI/: OCLFullSplit.py  __init__.py  average.py  azimuthalIntegrator.py  blob_detection.py  calibrant.py  calibration.py  containers.py  control_points.py  decorators.py  detectors.py  diffmap.py  diffmap_widget.py  directories.py  distortion.py  geometry.py  geometryRefinement.py  geometry_conversion.py  goniometer.py  grid.py  gui_utils.py  integrate_widget.py  io.py  load_integrators.py  massif.py  meson.build  method_registry.py  multi_geometry.py  ocl_azim.py  ocl_azim_csr.py  ocl_azim_csr_dis.py  ocl_azim_lut.py  ocl_fullSplit_CSR.pyx  ocl_hist_pixelsplit.py  ocl_preproc.py  ocl_sort.py  opencl.py  orderedset.py  parallax.py  peak_picker.py  (+9 more)
pyFAI/app/: __init__.py  average.py  benchmark.py  calib.py  calib2.py  check_calib.py  detector2nexus.py  diff_map.py  diff_tomo.py  drawmask.py  eiger_mask.py  integrate.py  meson.build  mx_calibrate.py  peakfinder.py  recalib.py  saxs.py  setup.py  sparsify.py  waxs.py
pyFAI/benchmark/: __init__.py  meson.build  setup.py
pyFAI/detectors/: __init__.py  _adsc.py  _common.py  _dectris.py  _esrf.py  _hexagonal.py  _imxpad.py  _non_flat.py  _others.py  _psi.py  _rayonix.py  _xspectrum.py  meson.build
pyFAI/engines/: CSC_engine.py  CSR_engine.py  __init__.py  histogram_engine.py  meson.build  preproc.py
pyFAI/ext/: CSC_common.pxi  CSC_integrator.pyx  CSR_common.pxi  LUT_common.pxi  _bispev.c  _bispev.pyx  _blob.c  _blob.pyx  _convolution.c  _convolution.pyx  _distortion.c  _distortion.pyx  _distortionCSR.c  _geometry.c  _geometry.pyx  _histogram_nomp.pyx  _histogram_omp.pyx  _openmp.pxd  _tree.c  _tree.pyx  bilinear.c  bilinear.pxi  bilinear.pyx  cpuid.c  crc32.pxd  dynamic_rectangle.pyx  fastcrc.c  fastcrc.pyx  histogram.c  histogram.py  histogram.pyx  histogram_nomp.pxi  histogram_omp.pxi  inpainting.c  inpainting.pyx  invert_geometry.pyx  isnan.pxd  marchingsquares.c  marchingsquares.pyx  math_common.pxi  (+52 more)
pyFAI/ext/src/: crc32.c  crc32.h
pyFAI/geometry/: __init__.py  core.py  cxi.py  fit2d.py  meson.build
pyFAI/gui/: ApplicationContext.py  CalibrationContext.py  CalibrationWindow.py  IntegrationDialog.py  __init__.py  _pyside_dynamic.py  cli_calibration.py  diffmap_widget.py  icons.py  integrate_widget.py  jupyter.py  matplotlib.py  meson.build  mpl_calib.py  mpl_calib_qt.py  peak_picker.py  qt.py  setup.py  utils.py
pyFAI/gui/calibration/: AbstractCalibrationTask.py  CalibrantPreview.py  CalibrantSelector.py  CalibrationContext.py  CalibrationWindow.py  DetectorLineEdit.py  DetectorManufacturer.py  DetectorModel.py  DetectorSelector.py  DetectorSelectorDrop.py  ExperimentTask.py  FileEdit.py  GeometryTask.py  IntegrationTask.py  MaskTask.py  PeakPickingTask.py  QuantityEdit.py  RingCalibration.py  RingExtractor.py  UnitSelector.py  __init__.py  setup.py  units.py  utils.py  validators.py
pyFAI/gui/dialog/: Detector3dDialog.py  DetectorSelectorDialog.py  FileTypeComboBox.py  GeometryDialog.py  ImageFileDialog.py  IntegrationMethodDialog.py  MessageBox.py  OpenClDeviceDialog.py  SafeFileSystemModel.py  __init__.py  meson.build  utils.py
pyFAI/gui/helper/: MarkerManager.py  ProcessingWidget.py  RingCalibration.py  RingExtractor.py  SynchronizeRawView.py  meson.build  model_transform.py
pyFAI/gui/jupyter/: __init__.py  _plot.py  calib.py  meson.build  peak_picker.py
pyFAI/gui/model/: AbstractModel.py  CalibrantModel.py  CalibrationModel.py  ConstraintModel.py  DataModelAdaptor.py  ExperimentSettingsModel.py  FilenameModel.py  Fit2dGeometryModel.py  GeometryConstraintsModel.py  GeometryHistoryModel.py  (+7 more)
pyFAI/io/: __init__.py  _json.py  image.py  integration_config.py  meson.build  nexus.py  ponifile.py  sparse_frame.py  spots.py
pyFAI/opencl/: OCLFullSplit.py  __init__.py  azim_csr.py  azim_hist.py  azim_lut.py  common.py  medfilt.py  meson.build  ocl_azim_csr_dis.py  ocl_fullSplit_CSR.pyx  ocl_hist_pixelsplit.py  peak_finder.py  preproc.py  processing.py  setup.py  sort.py  utils.py
pyFAI/resources/: __init__.py  meson.build  setup.py
pyFAI/test/: __init__.py  meson.build  test_all.py  test_average.py  test_azimuthal_integrator.py  test_bayes.py  test_bilinear.py  test_bispev.py  test_blob_detection.py  test_bug_regression.py  test_calibrant.py  test_convolution.py  test_csr.py  test_detector.py  test_distortion.py  test_dummy.py  test_error_model.py  test_export.py  test_flat.py  test_geometry.py  test_geometry_refinement.py  test_goniometer.py  test_histogram.py  test_integrate.py  test_integrate_app.py  test_integrate_config.py  test_integrate_widget.py  test_invert_geometry.py  test_io.py  test_io_image.py  test_marchingsquares.py  test_mask.py  test_massif.py  test_method_registry.py  test_multi_geometry.py  test_ocl_sort.py  test_openCL.py  test_parallax.py  test_peak_picking.py  test_pickle.py  (+21 more)
pyFAI/utils/: __init__.py  bayes.py  callback.py  decorators.py  ellipse.py  grid.py  header_utils.py  ioutils.py  jupyter.py  logging_utils.py  mask_utils.py  mathutil.py  meson.build  multiprocessing.py  setup.py  shell.py  stringutil.py
src/pyFAI/: __init__.py  _version.py  average.py  azimuthalIntegrator.py  blob_detection.py  calibrant.py  containers.py  control_points.py  diffmap.py  directories.py  distortion.py  geometryRefinement.py  goniometer.py  grid.py  load_integrators.py  massif.py  meson.build  method_registry.py  multi_geometry.py  parallax.py  ring_extraction.py  single_geometry.py  spline.py  units.py  worker.py
(+1426 files in other folders)
