py.install_sources(
   ['Detector3dDialog.py',
    'DetectorSelectorDialog.py',
    'GeometryDialog.py',
    'IntegrationMethodDialog.py',
    'MessageBox.py',
    'OpenClDeviceDialog.py',
    '__init__.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/gui/dialog'  # Folder relative to site-packages to install to
)
