py.install_sources(
   ['MarkerManager.py',
    'ProcessingWidget.py',
    'RingCalibration.py',
    'RingExtractor.py',
    'SynchronizeMaskToolColor.py',
    'SynchronizePlotBackground.py',
    'SynchronizeRawView.py',
    '__init__.py',
    'model_transform.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/gui/helper'  # Folder relative to site-packages to install to
)
