py.install_sources(
   ['AbstractCalibrationTask.py',
    'ExperimentTask.py',
    'GeometryTask.py',
    'IntegrationTask.py',
    'MaskTask.py',
    'PeakPickingTask.py',
    '__init__.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/gui/tasks'  # Folder relative to site-packages to install to
)
