subdir('test')

py.install_sources(
   ['FilterBuilder.py',
    'ProxyAction.py',
    '__init__.py',
    'colorutils.py',
    'eventutils.py',
    'imageutils.py',
    'projecturl.py',
    'timeutils.py',
    'tree.py',
    'units.py',
    'unitutils.py',
    'validators.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/gui/utils'  # Folder relative to site-packages to install to
)
