subdir('test')
subdir('model')

py.install_sources(
   ['AdvancedComboBox.py',
    'AdvancedSpinBox.py',
    'CalibrantPreview.py',
    'CalibrantSelector.py',
    'CalibrantSelector2.py',
    'ChoiceToolButton.py',
    'ColoredCheckBox.py',
    'DetectorLabel.py',
    'DetectorModel.py',
    'DetectorSelector.py',
    'FileEdit.py',
    'FitParamView.py',
    'GeometryHistoryComboBox.py',
    'GeometryLabel.py',
    'GeometryTabs.py',
    'LoadImageToolButton.py',
    'MethodLabel.py',
    'MonitorNameEdit.py',
    'OpenClDeviceLabel.py',
    'QuantityEdit.py',
    'QuantityLabel.py',
    'UnitLabel.py',
    'UnitSelector.py',
    'WorkerConfigurator.py',
    '__init__.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/gui/widgets'  # Folder relative to site-packages to install to
)
