subdir('icons')
subdir('images')
subdir('styles')

py.install_sources(
   ['calibrant-selector2.ui',
    'calibration-experiment.ui',
    'calibration-geometry.ui',
    'calibration-main.ui',
    'calibration-mask.ui',
    'calibration-peakpicking.ui',
    'calibration-result.ui',
    'constraint-drop.ui',
    'detector-selection-drop.ui',
    'diffmap.ui',
    'integration-dialog.ui',
    'integration-method.ui',
    'integration-process.ui',
    'opencl-device-dialog.ui',
    'refine-6param.ui',
    'worker-configurator.ui',
    'geometry-tabs.ui'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/resources/gui'  # Folder relative to site-packages to install to
)
