py.install_sources(
 ['__init__.py',
  'average.py',
  'benchmark.py',
  'calib.py',
  'calib2.py',
  'check_calib.py',
  'detector2nexus.py',
  'diff_map.py',
  'diff_tomo.py',
  'drawmask.py',
  'eiger_mask.py',
  'integrate.py',
  'mx_calibrate.py',
  'peakfinder.py',
  'pilx.py',
  'recalib.py',
  'saxs.py',
  'sparsify.py',
  'waxs.py'
  ],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/app'  # Folder relative to site-packages to install to
)
