py.install_sources(
['__init__.py',
 '_adsc.py',
 '_common.py',
 '_dectris.py',
 '_esrf.py',
 '_hexagonal.py',
 '_imxpad.py',
 '_non_flat.py',
 '_others.py',
 '_psi.py',
 '_rayonix.py',
 '_xspectrum.py',
 'orientation.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/detectors'  # Folder relative to site-packages to install to
)
