py.install_sources(
   ['__init__.py',
    '_json.py',
    'diffmap_config.py',
    'image.py',
    'integration_config.py',
    'nexus.py',
    'ponifile.py',
    'sparse_frame.py',
    'spots.py',
    'tree.py',
    'xrdml.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/io'  # Folder relative to site-packages to install to
)
