py.install_sources(
   ['__init__.py',
    'test_all.py',
    'test_average.py',
    'test_azimuthal_integrator.py',
    'test_bayes.py',
    'test_bilinear.py',
    'test_bispev.py',
    'test_blob_detection.py',
    'test_bug_regression.py',
    'test_calibrant.py',
    'test_convolution.py',
    'test_csr.py',
    'test_detector.py',
    'test_distortion.py',
    'test_dummy.py',
    'test_error_model.py',
    'test_export.py',
    'test_fiber_integrator.py',
    'test_flat.py',
    'test_geometry.py',
    'test_geometry_refinement.py',
    'test_goniometer.py',
    'test_histogram.py',
    'test_integrate.py',
    'test_integrate_app.py',
    'test_integrate_config.py',
    'test_invert_geometry.py',
    'test_io.py',
    'test_io_image.py',
    'test_io_diffmap_config.py',
    'test_mask.py',
    'test_massif.py',
    'test_method_registry.py',
    'test_multi_geometry.py',
    'test_parallax.py',
    'test_peak_picking.py',
    'test_pickle.py',
    'test_polarization.py',
    'test_preproc.py',
    'test_pyfai_api.py',
    'test_rectangle.py',
    'test_ring_extraction.py',
    'test_saxs.py',
    'test_scripts.py',
    'test_sparse.py',
    'test_sparse_builder.py',
    'test_spline.py',
    'test_split_pixel.py',
    'test_units.py',
    'test_utils.py',
    'test_utils_ellipse.py',
    'test_utils_header.py',
    'test_utils_mathutil.py',
    'test_utils_shell.py',
    'test_utils_stringutil.py',
    'test_uncertainties.py',
    'test_watershed.py',
    'test_worker.py',
    'test_medfilt_engine.py',
    'test_containers.py',
    'utilstest.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/test'  # Folder relative to site-packages to install to
)
