py.install_sources(
   ['__init__.py',
    'bayes.py',
    'callback.py',
    'decorators.py',
    'ellipse.py',
    'grid.py',
    'header_utils.py',
    'logging_utils.py',
    'mathutil.py',
    'multiprocessing.py',
    'orderedset.py',
    'shell.py',
    'stringutil.py',
    'mask_utils.py'],
  pure: false,    # Will be installed next to binaries
  subdir: 'pyFAI/utils'  # Folder relative to site-packages to install to
)
