
py.install_sources(
   ['CalibrantItemModel.py',
    'CalibrantFilterProxyModel.py',
    'AllDetectorItemModel.py',
    'DetectorFilterProxyModel.py',
    '__init__.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/gui/widgets/model'  # Folder relative to site-packages to install to
)
