py.install_sources(
   ['3d.png',
    '3d.svg',
    'calibrant-custom.png',
    'calibrant-custom.svg',
    'calibrant.png',
    'calibrant.svg',
    'constraint-max.png',
    'constraint-max.svg',
    'constraint-min.png',
    'constraint-min.svg',
    'constraint-no-max.png',
    'constraint-no-max.svg',
    'constraint-no-min.png',
    'constraint-no-min.svg',
    'extract-current-rings.png',
    'extract-current-rings.svg',
    'extract-more-rings.png',
    'extract-more-rings.svg',
    'extract-reachable-rings.png',
    'extract-reachable-rings.svg',
    'extract-ring.png',
    'extract-ring.svg',
    'extract-rings-to.png',
    'extract-rings-to.svg',
    'layer-warning.png',
    'layer-warning.svg',
    'menu-help.png',
    'menu-help.svg',
    'new-ring.png',
    'new-ring.svg',
    'options.png',
    'options.svg',
    'remove-peak.png',
    'remove-peak.svg',
    'search-full-ring.png',
    'search-full-ring.svg',
    'search-peak.png',
    'search-peak.svg',
    'search-ring.png',
    'search-ring.svg',
    'task-cake.png',
    'task-cake.svg',
    'task-fit-geometry.png',
    'task-fit-geometry.svg',
    'task-identify-rings.png',
    'task-identify-rings.svg',
    'task-mask.png',
    'task-mask.svg',
    'task-settings.png',
    'task-settings.svg',
    'variable-constrained-out.png',
    'variable-constrained-out.svg',
    'variable-constrained.png',
    'variable-constrained.svg',
    'variable-fixed.png',
    'variable-fixed.svg',
    'warning.png',
    'warning.svg'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/resources/gui/icons'  # Folder relative to site-packages to install to
)
