py.install_sources(
   ['__init__.py',
    'test_addition.py',
    'test_ocl_azim_csr.py',
    'test_ocl_azim_lut.py',
    'test_ocl_histo.py',
    'test_ocl_sort.py',
    'test_openCL.py',
    'test_peak_finder.py',
    'test_preproc.py',
    'test_collective.py'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/opencl/test'  # Folder relative to site-packages to install to
)
