py.install_sources(
   ['AgBh.D',
    'Al.D',
    'Au.D',
    'C14H30O.D',
    'CeO2.D',
    'Cr2O3.D',
    'CrOx.D',
    'CuO.D',
    'LaB6.D',
    'LaB6_SRM660a.D',
    'LaB6_SRM660b.D',
    'LaB6_SRM660c.D',
    'NaCl.D',
    'Ni.D',
    'PBBA.D',
    'Pt.D',
    'Si.D',
    'Si_SRM640.D',
    'Si_SRM640a.D',
    'Si_SRM640b.D',
    'Si_SRM640c.D',
    'Si_SRM640d.D',
    'Si_SRM640e.D',
    'TiO2.D',
    'ZnO.D',
    'alpha_Al2O3.D',
    'cristobaltite.D',
    'hydrocerussite.D',
    'mock.D',
    'vanadinite.D',
    'lysozyme.D',
    'quartz.D'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/resources/calibration'  # Folder relative to site-packages to install to
)
