py.install_sources(
   [
     '01_Hydrogen.abs',
     '02_Helium.abs',
     '03_Lithium.abs',
     '04_Beryllium.abs',
     '05_Boron.abs',
     '06_Carbon.abs',
     '07_Nitrogen.abs',
     '08_Oxygen.abs',
     '09_Fluorine.abs',
     '10_Neon.abs',
     '11_Sodium.abs',
     '12_Magnesium.abs',
     '13_Aluminum.abs',
     '14_Silicon.abs',
     '15_Phosphorus.abs',
     '16_Sulfur.abs',
     '17_Chlorine.abs',
     '18_Argon.abs',
     '19_Potassium.abs',
     '20_Calcium.abs',
     '21_Scandium.abs',
     '22_Titanium.abs',
     '23_Vanadium.abs',
     '24_Chromium.abs',
     '24_ Chromium.abs',
     '25_Manganese.abs',
     '26_Iron.abs',
     '27_Cobalt.abs',
     '28_Nickel.abs',
     '29_Copper.abs',
     '30_Zinc.abs',
     '31_Gallium.abs',
     '32_Germanium.abs',
     '33_Arsenic.abs',
     '34_Selenium.abs',
     '35_Bromine.abs',
     '36_Krypton.abs',
     '37_Rubidium.abs',
     '38_Strontium.abs',
     '39_Yttrium.abs',
     '40_Zirconium.abs',
     '41_Niobium.abs',
     '42_Molybdenum.abs',
     '43_Technetium.abs',
     '44_Ruthenium.abs',
     '45_Rhodium.abs',
     '46_Palladium.abs',
     '47_Silver.abs',
     '48_Cadmium.abs',
     '49_Indium.abs',
     '50_Tin.abs',
     '51_Antimony.abs',
     '52_Tellurium.abs',
     '53_Iodine.abs',
     '54_Xenon.abs',
     '55_Cesium.abs',
     '56_Barium.abs',
     '57_Lanthanum.abs',
     '58_Cerium.abs',
     '59_Praseodymium.abs',
     '60_Neodymium.abs',
     '61_Promethium.abs',
     '62_Samarium.abs',
     '63_Europium.abs',
     '64_Gadolinium.abs',
     '65_Terbium.abs',
     '66_Dysprosium.abs',
     '67_Holmium.abs',
     '68_Erbium.abs',
     '69_Thulium.abs',
     '70_Ytterbium.abs',
     '71_Lutetium.abs',
     '72_Hafnium.abs',
     '73_Tantalum.abs',
     '74_Tungsten.abs',
     '75_Rhenium.abs',
     '76_Osmium.abs',
     '77_Iridium.abs',
     '78_Platinum.abs',
     '79_Gold.abs',
     '80_Mercury.abs',
     '81_Thallium.abs',
     '82_Lead.abs',
     '83_Bismuth.abs',
     '84_Polonium.abs',
     '85_Astatine.abs',
     '86_Radon.abs',
     '87_Francium.abs',
     '88_Radium.abs',
     '89_Actinium.abs',
     '90_Thorium.abs',
     '91_Protactinium.abs',
     '92_Uranium.abs',
     'PeriodicTable.json'
    ],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/resources/elements'  # Folder relative to site-packages to install to
)
