subdir('collective')

py.install_sources(
   ['addition.cl',
    'bitonic.cl',
    'deactivate_atomic64.cl',
    'kahan.cl',
    'medfilt.cl',
    'memset.cl',
    'ocl_azim_CSR.cl',
    'ocl_azim_LUT.cl',
    'ocl_bispev.cl',
    'ocl_hist_pixelsplit.cl',
    'ocl_histo.cl',
    'ocl_lut.cl',
    'ocl_lut_pixelsplit.cl',
    'ocl_lut_pixelsplit2.cl',
    'ocl_lut_pixelsplit3.cl',
    'ocl_lut_pixelsplit_test.cl',
    'peakfinder.cl',
    'preprocess.cl',
    'reduction_test.cl',
    'reduction_test4.cl',
    'separate.cl',
    'sigma_clip.cl',
    'simple_peak_picker.cl',
    'sparsify.cl'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/resources/openCL'  # Folder relative to site-packages to install to
)
