py.install_sources(
 ['__init__.py',
'DiffractionImagePlotWidget.py',
'ImagePlotWidget.py',
'IntegratedPatternPlotWidget.py',
'MapPlotWidget.py',
'OpenAxisDatasetAction.py',
'ClearPointsAction.py',
'MapPlotContextMenu.py',
'RoiModeAction.py',
'RoiRangeWidget.py',
'TitleWidget.py',
  ],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/gui/pilx/widgets'  # Folder relative to site-packages to install to
)
