py.install_sources(
   ['icon.png',
    'pixelsplitting-bbox.png',
    'pixelsplitting-bbox.svg',
    'pixelsplitting-full.png',
    'pixelsplitting-full.svg',
    'pixelsplitting-no.png',
    'pixelsplitting-no.svg',
    'pixelsplitting-pseudo.png',
    'pixelsplitting-pseudo.svg'],
  pure: false,   # Will be installed next to binaries
  subdir: 'pyFAI/resources/gui/images'  # Folder relative to site-packages to install to
)
